# vtk_playground

./: CMakeLists.txt  README.md  config.cmake
include/: LogManager.hpp  ModelViewer.hpp  Translator.hpp  VtkItem.hpp
modules/style/: CMakeLists.txt  Style.qml  Theme.qml
modules/template/: CMakeLists.txt
modules/utility/: CMakeLists.txt
modules/utility/include/: Constants.hpp  Notificator.hpp  Settings.hpp  SingletonGetter.hpp  Utility.hpp
modules/utility/src/: Notificator.cpp  Settings.cpp
qml/: Main.qml
src/: LogManager.cpp  ModelViewer.cpp  Translator.cpp  VtkItem.cpp  main.cpp
tests/unit_test_cpp/: CMakeLists.txt  tst_testcpp1.cpp
tests/unit_test_qml/: CMakeLists.txt  main.cpp  setup.cpp  tst_testqml.qml
